cmake_minimum_required(VERSION 2.4)

PROJECT(rfcmd)

SET(rfcmd_SRCS
  rfcmd.c
  ftdi.c
)

IF(${RFCMD_DEBUG})
	ADD_DEFINITIONS( -DRFCMD_DEBUG )
ENDIF(${RFCMD_DEBUG})

INCLUDE_DIRECTORIES(
  /usr/src/linux/include
)

FIND_LIBRARY(FTDI_LIBRARY ftdi)

ADD_EXECUTABLE(rfcmd
  ${rfcmd_SRCS}
)

TARGET_LINK_LIBRARIES(rfcmd
 ${FTDI_LIBRARY}
)

INSTALL(TARGETS rfcmd RUNTIME DESTINATION bin)
