PROJECT( telldus-service )

CMAKE_MINIMUM_REQUIRED( VERSION 2.6.0 )

SET(BUILD_SERVICE	TRUE	CACHE BOOL "Build the service")
SET(BUILD_CLIENT 	FALSE	CACHE BOOL "Build the client")

if(BUILD_SERVICE)
	ADD_SUBDIRECTORY(service)
endif(BUILD_SERVICE)

IF (BUILD_CLIENT)
	ADD_SUBDIRECTORY(client)
ENDIF (BUILD_CLIENT)

