
CMAKE_MINIMUM_REQUIRED( VERSION 2.4.0 )

SET(BUILD_PLUGIN_TELLDUS-CORE	TRUE	CACHE BOOL "Build plugin 'TelldusCore'")

IF (BUILD_LIBTELLDUS-GUI)
	SET(BUILD_PLUGIN_DEVICES	TRUE	CACHE BOOL "Build plugin 'Devices'")
	SET(BUILD_PLUGIN_SYSTRAY	TRUE	CACHE BOOL "Build plugin 'Systray'")
ENDIF (BUILD_LIBTELLDUS-GUI)

ADD_SUBDIRECTORY(telldus)

IF(BUILD_PLUGIN_TELLDUS-CORE)
	ADD_SUBDIRECTORY(TelldusCore)
ENDIF(BUILD_PLUGIN_TELLDUS-CORE)

IF(BUILD_PLUGIN_DEVICES)
	ADD_SUBDIRECTORY(Devices)
ENDIF(BUILD_PLUGIN_DEVICES)

IF(BUILD_PLUGIN_SYSTRAY)
	ADD_SUBDIRECTORY(Systray)
ENDIF(BUILD_PLUGIN_SYSTRAY)

